# dating-app

./: .gitignore  README.md
backend/: .gitignore  DB_DESIGN_GUIDE.md  pyproject.toml  pytest.ini  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 1f4b0a6a8123_convert_user_ids_to_uuid.py  57f58bcfd7d3_add_matching_tables.py  7e78e0d5a3f5_add_auth_users_table.py  8675288e9cf7_init_yolk_staging_schema.py
backend/app/: database.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  groups.py  matching.py  photos.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: base.py  matching.py  user.py
backend/app/schemas/: auth.py  matching.py  photo.py  user.py
backend/app/services/: auth.py  matching.py  s3.py
backend/scripts/: add_mock_data.py  create_mock_groups.py  reset_users.py  test_auth_routes.py  test_groups_routes.py  test_matching_routes.py  verify_login.py
backend/tests/: conftest.py  test_auth.py
frontend/: env.d.ts  package-lock.json  package.json
frontend/app/: _layout.tsx  home.tsx  index.tsx  login.tsx  profile.tsx  signup.tsx
frontend/app/(tabs)/: _layout.tsx  discover.tsx  groups.tsx  home.tsx  matches.tsx  messages.tsx  settings.tsx
frontend/components/: button.tsx  input.tsx  themed-text.tsx
frontend/constants/: theme.ts
frontend/context/: auth-context.tsx
