
[tool.poetry]

name = "dating-app-backend"
version = "0.1.0"
description = "Backend for a dating app built with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["standard"], version = "^0.121.0"}
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.4"
python-multipart = "^0.0.20"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

